--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                 <div class="feature-widget text-left rounded">
                     <div class="services-icon text-primary mb-3">
@@ -219,7 +218,17 @@
                     </div>
                 </div>
             </div>
-
+            <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                <div class="feature-widget text-left rounded">
+                    <div class="services-icon text-primary mb-3">
+                        <i data-feather="layout" class="fea icon-md"></i>
+                    </div>
+                    <div class="services-texts">
+                        <h3 class="title mb-3">Mongo DB, Redis</h3>
+                        <p class="text-light-muted mb-4">Просмотр данных в noSQL БД</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                 <div class="feature-widget text-left rounded">
                     <div class="services-icon text-primary mb-3">
@@ -262,6 +271,17 @@
                     <div class="services-texts">
                         <h3 class="title mb-3">Kibana, Sentry</h3>
                         <p class="text-light-muted mb-4">Просмотр логов приложений</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                <div class="feature-widget text-left rounded">
+                    <div class="icon services-icon text-primary mb-3">
+                        <i data-feather="monitor" class="fea icon-md"></i>
+                    </div>
+                    <div class="services-texts">
+                        <h3 class="title mb-3">Jaeger</h3>
+                        <p class="text-light-muted mb-4">Интеграционное тестирование</p>
                     </div>
                 </div>
             </div>
